--- a/Unit01/40460_Mod04_Practice4b.ipynb
+++ b/Unit01/40460_Mod04_Practice4b.ipynb
@@ -1,104 +1,167 @@
 {
   "cells": [
     {
-      "metadata": {},
       "cell_type": "markdown",
-      "source": "# Lab 4b\n## `while()` Loops and Increments\n\n-----\n\n### Student will be able to\n- Create forever loops using `while` and `break`\n- Use incrementing variables in a while loop\n- Control while loops using Boolean operators"
-    },
-    {
       "metadata": {},
+      "source": [
+        "# Lab 4b\n",
+        "## `while()` Loops and Increments\n",
+        "\n",
+        "-----\n",
+        "\n",
+        "### Student will be able to\n",
+        "- Create forever loops using `while` and `break`\n",
+        "- Use incrementing variables in a while loop\n",
+        "- Control while loops using Boolean operators"
+      ]
+    },
+    {
       "cell_type": "markdown",
-      "source": "## Tasks"
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": "# [ ] use a \"forever\" while loop to get user input of integers to add to sum, \n# until a non-digit is entered, then break the loop and print sum\nsum = 0\n\n",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": "# [ ] use a while True loop (forever loop) to give 4 chances for input of a correct color in a rainbow\n# rainbow = \"red orange yellow green blue indigo violet\"\n\n",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": "# [ ] Get input for a book title, keep looping while input is Not in title format (title is every word capitalized)\ntitle = \"\"\n\n",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": "# [ ] create a math quiz question and ask for the solution until the input is correct\n\n",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "metadata": {},
-      "cell_type": "markdown",
-      "source": "## Fix the Error"
+      "source": [
+        "## Tasks"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": false
       },
-      "cell_type": "code",
-      "source": "# [ ] review the code, run, fix the error\ntickets = input(\"enter tickets remaining (0 to quit): \")\n\nwhile tickets > 0:\n        # if tickets are multiple of 3 then \"winner\"\n    if int(tickets/3) == tickets/3:\n        print(\"you win!\")\n    else:\n        print(\"sorry, not a winner.\")\n    tickets = int(input(\"enter tickets remaining (0 to quit): \"))\n\nprint(\"Game ended\")\n    \n",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# [ ] use a \"forever\" while loop to get user input of integers to add to sum, \n",
+        "# until a non-digit is entered, then break the loop and print sum\n",
+        "sum = 0\n",
+        "\n"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "trusted": false
+      },
+      "outputs": [],
+      "source": [
+        "# [ ] use a while True loop (forever loop) to give 4 chances for input of a correct color in a rainbow\n",
+        "# rainbow = \"red orange yellow green blue indigo violet\"\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "trusted": false
+      },
+      "outputs": [],
+      "source": [
+        "# [ ] Get input for a book title, keep looping while input is Not in title format (title is every word capitalized)\n",
+        "title = \"\"\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "trusted": false
+      },
+      "outputs": [],
+      "source": [
+        "# [ ] create a math quiz question and ask for the solution until the input is correct\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {},
-      "cell_type": "markdown",
-      "source": "## Create a function: quiz_item()  that asks a question and tests if input is correct  \n- quiz_item()has 2 parameter **strings**: question and solution  \n- shows question, gets answer input  \n- returns True if `answer == solution` or continues to ask question until correct answer is provided  \n- use a while loop\n\ncreate 2 or more quiz questions that call quiz_item()  \n**Hint**: provide multiple choice or T/F answers"
+      "source": [
+        "## Fix the Error"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": false
       },
-      "cell_type": "code",
-      "source": "# Create quiz_item() and 2 or more quiz questions that call quiz_item()\n\n",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# [ ] review the code, run, fix the error\n",
+        "tickets = input(\"enter tickets remaining (0 to quit): \")\n",
+        "\n",
+        "while tickets > 0:\n",
+        "        # if tickets are multiple of 3 then \"winner\"\n",
+        "    if int(tickets/3) == tickets/3:\n",
+        "        print(\"you win!\")\n",
+        "    else:\n",
+        "        print(\"sorry, not a winner.\")\n",
+        "    tickets = int(input(\"enter tickets remaining (0 to quit): \"))\n",
+        "\n",
+        "print(\"Game ended\")\n",
+        "    \n"
+      ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Create a function: quiz_item()  that asks a question and tests if input is correct  \n",
+        "- quiz_item()has 2 parameter **strings**: question and solution  \n",
+        "- shows question, gets answer input  \n",
+        "- returns True if `answer == solution` or continues to ask question until correct answer is provided  \n",
+        "- use a while loop\n",
+        "\n",
+        "create 2 or more quiz questions that call quiz_item()  \n",
+        "**Hint**: provide multiple choice or T/F answers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "trusted": false
+      },
+      "outputs": [],
+      "source": [
+        "# Create quiz_item() and 2 or more quiz questions that call quiz_item()\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "collapsed": true
       },
-      "cell_type": "markdown",
-      "source": "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
+      "source": [
+        "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
+      ]
     }
   ],
   "metadata": {
     "anaconda-cloud": {},
     "kernelspec": {
-      "name": "python3",
       "display_name": "Python 3",
-      "language": "python"
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.5.4",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
       }
     }
   },
